Ini update terbaru

--- a/percobaan1.html
+++ b/percobaan1.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"> 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Halo Basreng</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima perspiciatis, ratione debitis deserunt dignissimos doloremque accusamus. Libero asperiores, adipisci possimus eum modi nemo! Sapiente in reiciendis voluptatibus fugiat excepturi magni?</p>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+      perspiciatis, ratione debitis deserunt dignissimos doloremque accusamus.
+      Libero asperiores, adipisci possimus eum modi nemo! Sapiente in reiciendis
+      voluptatibus fugiat excepturi magni?
+    </p>
+  </body>
 </html>
